--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <!-- D3.js -->  </head>
+    <link rel="stylesheet" href="css/main.css" />
+ </head>
   <body>
     <div class="container">
       <h1>Kabit Savaiye</h1>
